--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ section {
 
 .grid {
   display: grid;
-  grid-template-columns: 25% 25% 25%;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
   grid-gap: 20px;
   grid-template-areas: 
@@ -125,9 +125,13 @@ small {
   font-weight: 600;  
 }
 
+.kira {
+  width: 90%;
+}
+
 .p {
   padding-top: 20px;
-  line-height: 25px;
+  font-size: 14px;
   font-weight: 500;
   opacity: 70%;
 }
