--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,8 @@ section {
 
 .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   grid-gap: 20px;
   grid-template-areas: 
   'card-1 card-1 card-2 card-3'
