--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,8 +1,3 @@
-/* @media screen and (max-width: 1200px){
-    .grid {
-
-    }
-} */
 
 @media screen and (max-width: 800px){
     header {
@@ -20,3 +15,12 @@
     }
   }
 
+  @media screen and (max-width: 1000px){
+    .grid {
+      grid-template-areas: 
+  'card-1 card-1 card-2'
+  'card-4 card-5 card-5'
+  'card-3 card-3';
+  grid-gap: 10px;
+    }
+}
