--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,142 @@
 
+@media screen and (min-width: 280px){
+
+  section {
+    padding: 30px 20px;
+  }
+
+  .time-container{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .margin-20 {
+    margin: 20px;
+    font-size: 100px;
+    padding: 0 25px;
+    border-radius: 20px;
+    color: #ffffff;
+    background-color: rgba(190, 254, 216, .3);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, .4);
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: auto;
+    grid-template-areas: 
+    'card-1'
+    'card-2'
+    'card-3'
+    'card-4'
+    'card-5';
+    grid-gap: 20px;
+  }
+}
+
+@media screen and (min-width: 300px){
+  .time-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .margin-20 {
+    margin: 20px;
+    font-size: 120px;
+    padding: 0 25px;
+    border-radius: 20px;
+    color: #ffffff;
+    background-color: rgba(190, 254, 216, .3);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, .4);
+  }
+
+
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: auto;
+    grid-template-areas: 
+    'card-1'
+    'card-2'
+    'card-3'
+    'card-4'
+    'card-5';
+    grid-gap: 20px;
+  }
+}
+
+
+
+
+
+@media screen and (min-width: 768px){
+  .time-container {
+    flex-direction: row;
+  }
+
+  .margin-20 {
+    font-size: 150px;
+  }
+
+  section {
+    padding: 40px 60px;
+  }
+}
+
+@media screen and (min-width: 1024px){
+  .margin-20 {
+    font-size: 150px;
+  }
+
+  .grid {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    'card-1 card-1'
+    'card-2 card-4'
+    'card-3 card-3'
+    'card-5 card-5';
+  }
+}
+
+@media screen and (min-width: 1200px){
+  .grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 20px;
+  grid-template-areas: 
+  'card-1 card-1 card-2 card-3'
+  'card-4 card-5 card-5 card-3';
+  font-family: 'Barlow Semi Condensed', sans-serif;
+}
+}
+
+
+@media all and (orientation:landscape){
+  .time-container {
+    flex-direction: row;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
 @media screen and (max-width: 800px){
     header {
       height: 100vh;
@@ -13,14 +151,6 @@
     .margin-20 {
       font-size: 100px;
     }
-  }
+  } */
 
-  @media screen and (max-width: 1000px){
-    .grid {
-      grid-template-areas: 
-  'card-1 card-1 card-2'
-  'card-4 card-5 card-5'
-  'card-3 card-3';
-  grid-gap: 10px;
-    }
-}
+ 
