--- a/css/style.css
+++ b/css/style.css
@@ -142,3 +142,85 @@ small {
 
 
 
+/* STARS SECTION */
+
+.star-section {
+  background: url('/img/bg-pattern-bottom-desktop.svg');
+}
+
+.text-stars {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.text-section h1 {
+  font-size: 40px;
+  font-weight: bold;
+  color: hsl(300, 43%, 22%);
+  padding-bottom: 20px;
+}
+
+.text-section p {
+  font-size: 17px;
+  color: hsl(303, 10%, 53%);
+  padding-bottom: 20px;
+}
+
+.stars {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.stars-card {
+  margin: 10px;
+  padding: 15px 40px;
+  display: block;
+  width: 100%;
+  font-size: 15px;
+  font-weight: bold;
+  color: hsl(300, 43%, 22%);
+  background: hsl(300, 24%, 96%);
+  border-radius: 10px;
+}
+
+.client-cards {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.client-card {
+  margin-bottom: 20px;
+  border-radius: 10px;
+  padding: 30px;
+  background: hsl(300, 43%, 22%);
+}
+
+.author {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.author-name small {
+  font-size: 13px;
+}
+
+.client-card p {
+  font-size: 15px;
+  color: hsl(0, 0%, 81%)
+}
+
+.author_name {
+  color: hsl(0, 0%, 100%);
+}
+
+.author_surname {
+  color: hsl(303, 10%, 53%);
+}
