--- a/css/responsive.css
+++ b/css/responsive.css
@@ -123,6 +123,32 @@
     top: 60%;
     left: 30%;
   }
+
+  .client-cards {
+    position: relative;
+    height: 300px;
+  }
+
+  .card__1 {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 30%;
+  }
+
+  .card__2 {
+    position: absolute;
+    top: 5%;
+    left: 35%;
+    width: 30%;
+  }
+
+  .card__3 {
+    position: absolute;
+    top: 10%;
+    left: 70%;
+    width: 30%;
+  }
 }
 
 @media screen and (min-width: 1200px){
